hook_macro/tests/expand/test_hook_error.stderr
error: custom attribute panicked
 --> tests/expand/test_hook_error.rs:9:1
  |
9 | #[cvt_hook_start(hook())]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Expected hook to be applied to a function
